# LearningSDL

./: CMakeLists.txt  README.md
demo1/: CMakeLists.txt  FirstScene.h  GameScene.cpp  IntermediateScene.h  MenuScene.h  main.cpp
demo2_pong/: GameOverScene.h  MenuScene.h  PongScene.cpp
demo3_space/: CMakeLists.txt  SpaceInvadersScene.cpp
demo3_space/src/: GameOverScene.h  GameStats.h  MenuScene.h  SpaceInvadersScene.cpp  SpaceInvadersScene.h  main.cpp
engine/: Animation.h  AnimatorComponent.h  AudioComponent.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  Camera.h  ColliderComponent.h  CollisionSystem.h  Component.h  FontManager.h  GameEngine.cpp  GameEngine.h  Input.h  InputComponent.cpp  InputComponent.h  MusicComponent.h  Object.h  RenderComponent.h  Scene.cpp  Scene.h  SceneOrchestrator.cpp  SceneOrchestrator.h  SceneSubsystem.h  ScriptComponent.h  ShapeComponent.h  TextComponent.h  Texture.h  TextureManager.h  TimerComponent.h  Transform.h  TransitionComponent.h  Vector.h
game/: GameScene.h  IntermediateScene.h
src/: Component.h  Enemy.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GameObject.cpp  GameObject.h  Input.h  InputActions.h  InputComponent.h  MyScene.h  Object.h  Player.cpp  Player.h  RenderComponent.h  Scene.h  SceneObject.h  ScriptComponent.h  Texture.h  TextureManager.cpp  TextureManager.h  Transform.h  Vector.h  main.cpp
